reference/prometheus/ingress.yaml
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: grafana
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/grafana`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: prometheus
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/prometheus`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: alertmanager
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/alertmanager`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
